<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/products"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_person_outline_black_24dp"
        android:title="@string/account" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_build_black_24dp"
        android:title="@string/settings" />
    <item
        android:id="@+id/mycart"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/mycart" />


    <item
        android:id="@+id/spacer"
        android:title="" />
    <item
        android:id="@+id/spacer1"
        android:title="" />
    <item
        android:id="@+id/spacer2"
        android:title="" />
    <item
        android:id="@+id/spacer3"
        android:title="" />




    <item
        android:id="@+id/loguut"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/logout" />

</menu>