<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_gravity="center_horizontal"

    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    app:cardBackgroundColor="@color/cartback"
    app:cardCornerRadius="4dp"
    app:cardElevation="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="93dp"
                android:layout_height="105dp"
                android:layout_marginTop="-2dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/placeholder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/product_name"
                        android:layout_width="180dp"
                        android:layout_height="35dp"
                        android:gravity="center"
                        android:text="Name of product"
                        android:textSize="14sp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <android.support.constraint.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="0">

                                <TextView
                                    android:id="@+id/textView4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="16dp"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_weight="0"
                                    android:text="@string/Total"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/totalprod_price"
                                    android:layout_width="79dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="8dp"
                                    android:layout_marginLeft="8dp"
                                    android:text="TextView"
                                    android:textSize="24sp"
                                    android:textStyle="bold"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toEndOf="@+id/textView4"
                                    tools:text="£10.0" />
                            </android.support.constraint.ConstraintLayout>

                        </LinearLayout>

                    </android.support.constraint.ConstraintLayout>

                </LinearLayout>

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="43dp"
                        android:layout_height="23dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/cost"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="TextView"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView5"
                        tools:text="£10.0" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="63dp"
                        android:layout_height="23dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/quantity"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/product_cartNum" />

                    <TextView
                        android:id="@+id/product_cartNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="52dp"
                        android:layout_marginRight="52dp"
                        android:text="TextView"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:layout_editor_absoluteY="1dp"
                        tools:text="5" />
                </android.support.constraint.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>

    </RelativeLayout>


</android.support.v7.widget.CardView>